rendering profile page only when user authenticate

--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -4,4 +4,7 @@
                 coedial / profile page
           </h1>
 
+          <p>name:  <%= user.name %></p>
+          <p>email: <%= user.email%></p>
+
         
