--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -7,4 +7,7 @@
           <p>name:  <%= user.name %></p>
           <p>email: <%= user.email%></p>
 
-        
+          
+
+        <form action="/users/sign-out" method="post"><input type="submit" value="signOut">
+        </form>
