--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,5 +1,25 @@
 
         <header>
             page header
+            
+            <ul>
+                <% if(locals.user) { %>
+                    <li>
+                        <a href="/users/profile"><%= user.name %></a>
+                    </li>
+                    <li><a href="/users/sign-out">signout</a>
+                    </li>
+
+                    <% } else { %>
+                        <li>
+                            <a href="/users/sign-in"> Sign In</a>
+                        </li>
+                        <li>
+                            <a href="/users/sign-up"> Sign Up</a>
+                        </li>
+                    
+                    <% } %>
+            </ul>
+            
         </header>
        
