created schema of post and view page of post

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,19 +1,11 @@
-<!-- <html>
-    <head>
-        <title>
-            <%= title %>
-        </title>
-    </head>
 
-    <body>
-          
-        <!-- including header -->
+    <h1>coedial / <%= title %> </h1>
 
-        <!-- <%- include('_header');%> --> -->
-        <h1>coedial / <%= title %> </h1>
+    <section id="feed-posts">
+    <h4>Posts</h4>
+    <form action="" id="new-post-form" method="post">
+        <textarea name="content" id="" cols="30" rows="3" placeholder="type here..."></textarea>
+        <input type="submit" value="Post">
+    </form>
 
-        <!-- linking footer -->
-
-        <!-- <%- include('_footer');%>
-    </body>
-</html> -->
+    </section>
