modified header section ejs and css file for better view

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,7 +1,8 @@
+/* Style the header with a grey background and some padding */
 .header {
     overflow: hidden;
-    background-color: #f1f1f1c0;
-    padding: 20px 10px;
+    background-color: #f1f1f1;
+    padding: 10px 10px;
   }
   
   /* Style the header links */
