--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
 
     <section id="feed-posts">
     <h4>Posts</h4>
-    <form action="" id="new-post-form" method="post">
+    <form action="/post/create" id="new-post-form" method="post">
         <textarea name="content" id="" cols="30" rows="3" placeholder="type here..."></textarea>
         <input type="submit" value="Post">
     </form>
