displayed the post and info related to user

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,4 +8,21 @@
         <input type="submit" value="Post">
     </form>
 
+    <div id="post-list-container">
+        <ul>
+            <% for (post of posts) { %>
+                <li>
+                    <p>
+                        <%= post.content %>
+                    <br>
+                    <small>
+                        <%= post.user.name %>
+                    </small>
+                    </p>
+                    
+                </li>
+           <% } %>
+        </ul>
+    </div>
+
     </section>
