--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,10 +3,12 @@
 
     <section id="feed-posts">
     <h4>Posts</h4>
+    <% if (locals.user) { %>
     <form action="/post/create" id="new-post-form" method="post">
         <textarea name="content" id="" cols="30" rows="3" placeholder="type here..."></textarea>
         <input type="submit" value="Post">
     </form>
+    <% } %>
 
     <div id="post-list-container">
         <ul>
