--- a/views/home.ejs
+++ b/views/home.ejs
@@ -21,6 +21,15 @@
                         <%= post.user.name %>
                     </small>
                     </p>
+                    <div class="post-comments">
+                        <% if (locals.user) { %>
+                            <form action="/comments/create" method="post">
+                                <input type="text" name="content" placeholder="type here to add comment...">
+                                <input type="hidden" name="post" value="<%= post._id %>">
+                                <input type="submit" value="Add comment"> 
+                            </form>
+                        <% } %>
+                    </div>
                     
                 </li>
            <% } %>
