--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,7 @@
     <h4>Posts</h4>
     <% if (locals.user) { %>
     <form action="/post/create" id="new-post-form" method="post">
-        <textarea name="content" id="" cols="30" rows="3" placeholder="type here..."></textarea>
+        <textarea name="content" id="" cols="30" rows="3" placeholder="type here..." required></textarea>
         <input type="submit" value="Post">
     </form>
     <% } %>
@@ -24,11 +24,23 @@
                     <div class="post-comments">
                         <% if (locals.user) { %>
                             <form action="/comments/create" method="post">
-                                <input type="text" name="content" placeholder="type here to add comment...">
+                                <input type="text" name="content" placeholder="type here to add comment..." required>
                                 <input type="hidden" name="post" value="<%= post._id %>">
                                 <input type="submit" value="Add comment"> 
                             </form>
                         <% } %>
+
+                        <div class="post-comment-list">
+                            <ul id="post-comments-<%= post._id %>">
+                                <% for(comment of post.comments){%>
+                                    <p> <%= comment.content %></p>
+                                    <br>
+                                    <small><%= comment.user.name %></small>
+                                    
+                                    <%} %>
+
+                            </ul>
+                        </div>
                     </div>
                     
                 </li>
