--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,6 +15,11 @@
             <% for (post of posts) { %>
                 <li>
                     <p>
+                        <% if(locals.user && locals.user.id == post.user.id) { %>
+                        <small>
+                            <a href="/post/destroy/<%= post.id %>"> X </i></a>
+                        </small>
+                        <% } %>
                         <%= post.content %>
                     <br>
                     <small>
