--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,7 +17,7 @@
                     <p>
                         <% if(locals.user && locals.user.id == post.user.id) { %>
                         <small>
-                            <a href="/post/destroy/<%= post.id %>"> X </i></a>
+                            <a href="/post/destroy/<%= post.id %>"> X </a>
                         </small>
                         <% } %>
                         <%= post.content %>
@@ -38,11 +38,17 @@
                         <div class="post-comment-list">
                             <ul id="post-comments-<%= post._id %>">
                                 <% for(comment of post.comments){%>
-                                    <p> <%= comment.content %></p>
+                                    <p>
+                                        <% if(locals.user && locals.user.id == comment.user.id) { %>
+                                            <small>
+                                                <a href="/comments/destroy/<%= comment.id %>"> X </a>
+                                            </small>
+                                            <% } %>
+                                        <%= comment.content %>
                                     <br>
                                     <small><%= comment.user.name %></small>
-                                    
-                                    <%} %>
+                                </p>
+                              <%} %>
 
                             </ul>
                         </div>
