--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,48 +13,9 @@
     <div id="post-list-container">
         <ul>
             <% for (post of posts) { %>
-                <li>
-                    <p>
-                        <% if(locals.user && locals.user.id == post.user.id) { %>
-                        <small>
-                            <a href="/post/destroy/<%= post.id %>"> X </a>
-                        </small>
-                        <% } %>
-                        <%= post.content %>
-                    <br>
-                    <small>
-                        <%= post.user.name %>
-                    </small>
-                    </p>
-                    <div class="post-comments">
-                        <% if (locals.user) { %>
-                            <form action="/comments/create" method="post">
-                                <input type="text" name="content" placeholder="type here to add comment..." required>
-                                <input type="hidden" name="post" value="<%= post._id %>">
-                                <input type="submit" value="Add comment"> 
-                            </form>
-                        <% } %>
 
-                        <div class="post-comment-list">
-                            <ul id="post-comments-<%= post._id %>">
-                                <% for(comment of post.comments){%>
-                                    <p>
-                                        <% if(locals.user && locals.user.id == comment.user.id) { %>
-                                            <small>
-                                                <a href="/comments/destroy/<%= comment.id %>"> X </a>
-                                            </small>
-                                            <% } %>
-                                        <%= comment.content %>
-                                    <br>
-                                    <small><%= comment.user.name %></small>
-                                </p>
-                              <%} %>
-
-                            </ul>
-                        </div>
-                    </div>
-                    
-                </li>
+                <%- include('__post') -%>
+                
            <% } %>
         </ul>
     </div>
