displayed user profile link of all user on home page

--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -4,7 +4,7 @@
                 coedial / profile page
           </h1>
 
-          <p>name :<%= user.name%></p>
-          <p>email: <%= user.email%></p>
+          <p>name :<%= profile_user.name%></p>
+          <p>email: <%= profile_user.email%></p>
 
         
