--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -2,9 +2,23 @@
 
         <h1>
                 coedial / profile page
-          </h1>
-
-          <p>name :<%= profile_user.name%></p>
-          <p>email: <%= profile_user.email%></p>
+        </h1>
 
         
+
+        <% if (user.id == profile_user.id) { %>
+
+                <!-- if user matches then show the form  -->
+                <form action="/users/update/<%= profile_user.id %>" method="post">
+                        <input type="text" name="name" placeholder="Your name" value="<%= profile_user.name %>" required >
+                        <input type="email" name="email" placeholder="Your email" value="<%= profile_user.email %>" required >
+                        <input type="submit" value="Update">
+
+                </form>
+
+        <% } else { %>     
+                <!-- else show only the profile info -->
+                <p>name :<%= profile_user.name%></p>
+                <p>email: <%= profile_user.email%></p>
+
+        <% } %>
