added some css for better look oh home page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,32 +1,37 @@
-
-    <h1>coedial / <%= title %> </h1>
+    <link rel="stylesheet" href="/css/home.css">
+    <!-- <h1>coedial / <%= title %> </h1> -->
+<div id="home-container">
 
     <section id="feed-posts">
-    <h4>Posts</h4>
-    <% if (locals.user) { %>
-    <form action="/post/create" id="new-post-form" method="post">
-        <textarea name="content" id="" cols="30" rows="3" placeholder="type here..." required></textarea>
-        <input type="submit" value="Post">
-    </form>
-    <% } %>
+        <h4>Posts</h4>
+        <% if (locals.user) { %>
+        <form action="/post/create" id="new-post-form" method="post">
+            <textarea name="content" id="" cols="30" rows="3" placeholder="type here..." required></textarea>
+            <input type="submit" value="Post">
+        </form>
+        <% } %>
+    
+        <div id="post-list-container">
+            <ul>
+                <% for (post of posts) { %>
+    
+                    <%- include('__post') -%>
+                    
+               <% } %>
+            </ul>
+        </div>
+    
+        </section>
+    
+        <section id="user-friends" >
+            <h4>Friends</h4>
+            <% for (u of all_users) { %>
+                <p>
+                    <a href="/users/profile/<%= u.id %>"> <%= u.name %> </a>
+                </p>
+                <% } %>
+        </section>
+    
 
-    <div id="post-list-container">
-        <ul>
-            <% for (post of posts) { %>
-
-                <%- include('__post') -%>
-                
-           <% } %>
-        </ul>
-    </div>
-
-    </section>
-
-    <section id="user-friends" >
-        <h4>Friends</h4>
-        <% for (u of all_users) { %>
-            <p>
-                <a href="/users/profile/<%= u.id %>"> <%= u.name %> </a>
-            </p>
-            <% } %>
-    </section>
+</div>
+   
