--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -1,4 +1,5 @@
-<h1>Sign Up</h1>
+<link rel="stylesheet" href="/css/signup.css">
+<!-- <h1>Sign Up</h1>
 
 <form action="/users/create" method="post">
     <input type="text" name="name" placeholder="Your Name" required>
@@ -8,4 +9,38 @@
     <input type="submit" value="sign Up">
 
 
+</form> -->
+
+
+<form action="/users/create" method="post" class="modal-content">
+    <div class="container">
+        <h1>Sign Up</h1>
+        <p>Please fill in this form to create an account.</p>
+        <hr>
+        <label for="name"><b>Name</b></label>
+        <input type="text" name="name" placeholder="Enter Name" required>
+
+        <label for="email"><b>Email</b></label>
+        <input type="text" placeholder="Enter Email" name="email" required>
+
+        <label for="psw"><b>Password</b></label>
+        <input type="password" placeholder="Enter Password" name="password" required>
+
+        <label for="psw-repeat"><b>Repeat Password</b></label>
+        <input type="password" placeholder="Repeat Password" name="confirm_password" required>
+        
+        <label>
+        <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
+        </label>
+
+        <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
+
+        <div class="clearfix">
+        <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+        <button type="submit" class="signupbtn">Sign Up</button>
+        <!-- <input type="submit" value="sign Up" class="signupbtn"> -->
+
+        </div>
+    </div>
 </form>
+
