--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -27,10 +27,14 @@
 
     <button>Log In</button>
     <div class="social">
-      <div class="go"><i class="fab fa-google"></i>  Google</div>
+      <div class="go"><i class="fab fa-google"></i> 
+        <a href="/users/auth/google">Google</a>
+    </div>
       <div class="fb"><i class="fab fa-facebook"></i>  Facebook</div>
     </div>
 </form>
+
+
 
 
 
