--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -36,11 +36,17 @@
         <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
 
         <div class="clearfix">
-       
+
+            
+            
         <button type="submit" class="signupbtn">Sign Up</button>
         
 
         </div>
     </div>
 </form>
+<form action="/users/auth/google">
+    <input type="submit" value=" Google" />
+</form>
+
 
