makes some changes in require file for showing likes

--- a/views/__comment.ejs
+++ b/views/__comment.ejs
@@ -8,5 +8,17 @@
         <%= comment.content %>
     <br>
     <small><%= comment.user.name %></small>
+    <!-- CHANGE:: display likes of comment, if user logged in then show link in toggle link else show the count -->
+    <!-- study about data attributes -->
+    <small>
+        <% if (locals.user) { %>
+            <a class="toggle-like-button" data-likes="<%= comment.likes.length %>" href="/likes/toggle?id=<%=comment._id%>&type=Comment">
+                <%= comment.likes.length %> Likes
+            </a>
+            <% } else { %>
+                <%= comment.likes.length %> Likes
+                
+            <% } %>
+    </small>
     </p>
 </li>
