--- a/views/__post.ejs
+++ b/views/__post.ejs
@@ -10,6 +10,19 @@
     <small>
         <%= post.user.name %>
     </small>
+    <!-- CHANGE:: display the likes of post, if user logged in, then show link of toggle like, else just show count -->
+    <br>
+    <!-- study about data attribute -->
+    <small>
+        <% if (locals.user) { %>
+        <a class="toggle-like-button" data-likes="<%= post.likes.length %>" href="/likes/toggle/?id=<%=post._id%>&type=Post">
+            <%= post.likes.length %> Likes
+        </a>
+        <% } else { %>
+            <%= post.likes.length %> Likes
+            
+        <% } %>
+    </small>
     </p>
     <div class="post-comments">
         <% if (locals.user) { %>
